# tauri-repo

./: Cargo.toml  build.rs  shell.nix
.cargo/: config.toml
crates/t-lib/: Cargo.toml
crates/t-rpc/: Cargo.toml  build.rs
crates/t-rpc/benches/: codec.rs
crates/t-rpc/benches/codec_impl/: mod.rs  prost.rs  rkyv.rs
crates/t-rpc/src/: lib.rs
crates/t-rpc/src/codec/: rkyv.rs
crates/t-srv/: Cargo.toml
crates/t-srv/src/: lib.rs  main.rs  rpc.rs
crates/t-web/: Cargo.toml
crates/t-web/src/: grpc_web_client.rs  lib.rs  log.rs  main.rs  rpc.rs  view.rs
proto/: internal.proto
src/: app.rs  grpc_web_client.rs  http_client.rs  lib.rs  main.rs  rpc.rs  rpc_client.rs  view.rs
src-tauri/: Cargo.toml  Tauri.toml  build.rs  tauri.conf.json.bak
src-tauri/src/: lib.rs  log.rs  main.rs  rpc.rs  rpc_test.rs
