[package]
name = "tauri-repo-ui"
version = "0.1.0"
edition = "2021"
# default-target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
gloo = { version = "0.11"}
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1.7"
# tokio = { version = "1", features = ["rt", "macros"] }

hyper-util = { version = "0.1.4", features = ["client"]}
tower = { version = "0.5" }
tonic = "0.13"
tonic-web = "0.13"

[workspace]
members = ["src-tauri"]

[build-dependencies]
tonic-build = { version = "0.13" }
