[package]
edition = "2021"
name    = "tauri-repo-ui"
version = "0.1.0"
# default-target = "wasm32-unknown-unknown"


[dependencies]
console_error_panic_hook = { version = "0.1" }
js-sys                   = { version = "0.3" }
leptos                   = { version = "0.8", features = ["csr"] }
serde                    = { version = "1", features = ["derive"] }
serde-wasm-bindgen       = { version = "0.6" }
wasm-bindgen             = { version = "0.2" }
wasm-bindgen-futures     = { version = "0.4" }

gloo                       = { version = "0.11" }
http                       = { version = "1.3" }
http-body                  = { version = "1.0" }
http-body-util             = { version = "0.1" }
nill                       = { version = "0.1.2" }
prost                      = { version = "0.13" }
thiserror                  = { version = "2.0" }
tonic                      = { version = "0.13", default-features = false, features = ["codegen", "prost"] }
tonic-web                  = { version = "0.13" }
tower                      = { version = "0.5" }
tracing                    = { version = "0.1" }
tracing-browser-subscriber = { version = "0.2" }
web-sys                    = { version = "0.3" }
# tokio = { version = "1", features = ["rt", "macros"] }
# hyper-util = { version = "0.1.4", features = ["client"]}


[workspace]
members = ["src-tauri"]


[build-dependencies]
tonic-build = { version = "0.13", default-features = false, features = ["prost"] }
