[package]
name = "tauri-repo"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_repo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
prost = "0.13"
tonic = "0.13"
tonic-web = "0.13"
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3", features = ["tracing-log", "fmt"] }
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = { version = "0.13" }
