[package]
authors     = ["you"]
description = "A Tauri App"
edition     = "2021"
name        = "tauri-repo"
version     = "0.1.0"


[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
name       = "tauri_repo_lib"


[dependencies]
nill                = { version = "1.0.0" }
prost               = { version = "0.13" }
serde               = { version = "1", features = ["derive"] }
serde_json          = { version = "1" }
tauri               = { version = "2", features = [] }
tauri-plugin-log    = { version = "2" }
tauri-plugin-opener = { version = "2" }
tokio               = { version = "1", features = ["full"] }
tonic               = { version = "0.13", features = ["zstd"] }
tonic-web           = { version = "0.13" }
tower-http          = { version = "0.6", features = ["cors", "trace"] }
tracing             = { version = "0.1" }
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }


[build-dependencies]
tauri-build = { version = "2", features = ["config-toml"] }
tonic-build = { version = "0.13" }
