[package]
name = "t-rpc"

description = "t-rpc"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]


[lints]
workspace = true


[dependencies]
prost     = { workspace = true }
tonic     = { workspace = true, features = ["codegen", "prost"] }
tonic-web = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }


[features]
default   = []
router    = ["tonic/router"]
transport = ["tonic/transport"]
