[package]
name = "t-rpc"

description = "t-rpc"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }


[lib]


[lints]
workspace = true


[dependencies]
nill      = { workspace = true }
prost     = { workspace = true }
rkyv      = { workspace = true, features = ["unaligned"], optional = true }
tonic     = { workspace = true, features = ["codegen", "prost"] }
tonic-web = { workspace = true }


[build-dependencies]
tonic-build = { workspace = true, features = ["prost"] }


[features]
default    = ["rkyv-codec"]
rkyv-codec = ["dep:rkyv"]
router     = ["tonic/router"]
transport  = ["tonic/transport"]
