[package]
name = "t-srv"

description = "t-srv"
edition     = { workspace = true }
license     = { workspace = true }
version     = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]


[dependencies]
t-rpc = { workspace = true }

nill                = { workspace = true }
prost               = { workspace = true }
serde               = { workspace = true, features = ["derive"] }
serde_json          = { workspace = true }
tauri               = { workspace = true }
tauri-plugin-log    = { workspace = true }
tauri-plugin-opener = { workspace = true }
tokio               = { workspace = true, features = ["macros", "net", "rt-multi-thread", "sync"] }
tonic               = { workspace = true, features = ["codegen", "prost", "router", "transport"] }
tonic-web           = { workspace = true }
tower-http          = { workspace = true, features = ["cors", "trace"] }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true, features = ["env-filter"] }


[build-dependencies]
tauri-build = { workspace = true, features = ["config-toml"] }
